# spc

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  app_architecture.md  clerk_migration_guide.md  code_review.md  deployment_guide.md  docker-compose.yml  local_testing.md
backend/: main.py  pyproject.toml
backend/app/: auth.py  database.py  deps.py  main.py
backend/app/routers/: admin.py  auth.py  bookings.py  chat.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/convex/: admin.ts  auth.ts  bookings.ts  chat.ts  http.ts  schema.ts  users.ts
frontend/convex/_generated/: api.d.ts
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/admin/users/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/dashboard/book/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/login/[[...rest]]/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: ChatWidget.tsx  ConvexClientProvider.tsx  Footer.tsx  Navbar.tsx
frontend/src/components/landing/: HeroSection.tsx  RegisterCTASection.tsx  TeamSection.tsx  WhoWeAreSection.tsx
frontend/src/lib/: api.ts  auth.ts  mockData.ts  store.ts
frontend/src/types/: index.ts
frontend/tests/: fixes.test.ts
scripts/: start-linux.sh  start-windows.ps1  stop-linux.sh  stop-windows.ps1
